--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-three/fiber": "^9.1.2",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.0",
     "autoprefixer": "^10.4.20",
@@ -44,6 +45,7 @@
     "react-hook-form": "^7.57.0",
     "react-resizable-panels": "^2.1.9",
     "stripe": "^17.7.0",
+    "three": "^0.177.0",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
@@ -52,6 +54,7 @@
     "@types/node": "^20.19.0",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
+    "@types/three": "^0.177.0",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
     "eslint": "^9",
